--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,15 @@
 <resources>
     <string name="app_name">My Basic App</string>
     <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello World!</string>
+    <string name="english">English</string>
+    <string name="french">French</string>
+    <string name="download">Download JSON</string>
+    <string name="downloading">Wait ... it\'s downloading ...</string>
+    <string name="finished_downloading">Finished downloading</string>
+    <string name="json_downloaded">JSON file downloaded</string>
+    <string name="view_json_file">Click here to view your json file</string>
+    <string name="title_activity_rvjson_file">RVJsonFile</string>
+
+
 </resources>
